kubernetes/platform/websocket/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: websocket-gateway-service
  namespace: platform

spec:
  selector:
    app: websocket-gateway

  ports:
    - port: 8080
      targetPort: 8080

  type: ClusterIP
