kubernetes/platform/websocket/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: websocket-gateway-ingress
  namespace: platform
  annotations:
    konghq.com/protocols: "http,https"
spec:
  ingressClassName: kong

  rules:
    - http:
        paths:
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: websocket-gateway-service
                port:
                  number: 8080
